fix logo style2

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -32,12 +32,14 @@ proxyfileaddr: static/rancherfile/proxy
   osrancherfooteraddr: rancherui/ui/app/components/page-footer/template.hbs
   rancherloginfileaddr: rancherui/pandaria-ui/lib/login/addon/login/template.hbs
   rancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header-left-top/template.hbs
+  osrancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header/template.hbs
   osrancherloginfileaddr: rancherui/ui/lib/login/addon/login/template.hbs
   rancherapiaddr: rancherui/pandaria-ui/app/application/route.js
   osrancherapiaddr: rancherui/ui/app/application/route.js
   rancherthemeaddr: rancherui/pandaria-ui/app/styles/abstracts/_variables.scss
   osrancherthemeaddr: rancherui/ui/app/styles/abstracts/_variables.scss
   navfile: static/rancherfile/2.3.6/navfile
+  osnavfile: static/rancherfile/2.3.6/osnavfile
 2.3.8:
   logoaddr: rancherui/pandaria-ui/public/assets/images/logos/rancher-logo-cow-white.svg
   logoopensourceaddr: rancherui/pandaria-ui/public/assets/images/logos/main.svg
@@ -58,12 +60,14 @@ proxyfileaddr: static/rancherfile/proxy
   osrancherfooteraddr: rancherui/ui/app/components/page-footer/template.hbs
   rancherloginfileaddr: rancherui/pandaria-ui/lib/login/addon/login/template.hbs
   rancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header-left-top/template.hbs
+  osrancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header/template.hbs
   osrancherloginfileaddr: rancherui/ui/lib/login/addon/login/template.hbs
   rancherapiaddr: rancherui/pandaria-ui/app/application/route.js
   osrancherapiaddr: rancherui/ui/app/application/route.js
   rancherthemeaddr: rancherui/pandaria-ui/app/styles/abstracts/_variables.scss
   osrancherthemeaddr: rancherui/ui/app/styles/abstracts/_variables.scss
   navfile: static/rancherfile/2.3.8/navfile
+  osnavfile: static/rancherfile/2.3.8/osnavfile
 2.3.9:
   logoaddr: rancherui/pandaria-ui/public/assets/images/logos/rancher-logo-cow-white.svg
   logoopensourceaddr: rancherui/pandaria-ui/public/assets/images/logos/main.svg
@@ -84,12 +88,14 @@ proxyfileaddr: static/rancherfile/proxy
   osrancherfooteraddr: rancherui/ui/app/components/page-footer/template.hbs
   rancherloginfileaddr: rancherui/pandaria-ui/lib/login/addon/login/template.hbs
   rancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header-left-top/template.hbs
+  osrancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header/template.hbs
   osrancherloginfileaddr: rancherui/ui/lib/login/addon/login/template.hbs
   rancherapiaddr: rancherui/pandaria-ui/app/application/route.js
   osrancherapiaddr: rancherui/ui/app/application/route.js
   rancherthemeaddr: rancherui/pandaria-ui/app/styles/abstracts/_variables.scss
   osrancherthemeaddr: rancherui/ui/app/styles/abstracts/_variables.scss
   navfile: static/rancherfile/2.3.9/navfile
+  osnavfile: static/rancherfile/2.3.9/osnavfile
 2.4.8:
   logoaddr: rancherui/pandaria-ui/public/assets/images/logos/rancher-logo-cow-white.svg
   logoopensourceaddr: rancherui/pandaria-ui/public/assets/images/logos/main.svg
@@ -110,9 +116,11 @@ proxyfileaddr: static/rancherfile/proxy
   osrancherfooteraddr: rancherui/ui/app/components/page-footer/template.hbs
   rancherloginfileaddr: rancherui/pandaria-ui/lib/login/addon/login/template.hbs
   rancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header-left-top/template.hbs
+  osrancherlogofileaddr: rancherui/pandaria-ui/app/components/page-header/template.hbs
   osrancherloginfileaddr: rancherui/ui/lib/login/addon/login/template.hbs
   rancherapiaddr: rancherui/pandaria-ui/app/application/route.js
   osrancherapiaddr: rancherui/ui/app/application/route.js
   rancherthemeaddr: rancherui/pandaria-ui/app/styles/abstracts/_variables.scss
   osrancherthemeaddr: rancherui/ui/app/styles/abstracts/_variables.scss
   navfile: static/rancherfile/2.4.8/navfile
+  osnavfile: static/rancherfile/2.4.8/osnavfile
